--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content='width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
-    <title>Unity WebGL Player | My project (5)</title>
+    <title>Unity WebGL Player | HealthEducationSheet</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
          html{
@@ -81,7 +81,7 @@
                     codeUrl: "Build/0912.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
-                    productName: "My project (5)",
+                    productName: "HealthEducationSheet",
                     productVersion: "0.1",
                     //webglContextAttributes: { "preserveDrawingBuffer": true },
                     // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
