--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <script src="Build/0912.loader.js"></script>
+    <script src="Build/20230912.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -76,11 +76,11 @@
                 
                 document.getElementById("startWebcamDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/0912.data",
-                    frameworkUrl: "Build/0912.framework.js",
-                    codeUrl: "Build/0912.wasm",
+                    dataUrl: "Build/20230912.data",
+                    frameworkUrl: "Build/20230912.framework.js",
+                    codeUrl: "Build/20230912.wasm",
                     streamingAssetsUrl: "StreamingAssets",
-                    companyName: "DefaultCompany",
+                    companyName: "0912",
                     productName: "HealthEducationSheet",
                     productVersion: "0.1",
                     //webglContextAttributes: { "preserveDrawingBuffer": true },
