--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <script src="Build/20230912.loader.js"></script>
+    <script src="Build/091201.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -76,9 +76,9 @@
                 
                 document.getElementById("startWebcamDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/20230912.data",
-                    frameworkUrl: "Build/20230912.framework.js",
-                    codeUrl: "Build/20230912.wasm",
+                    dataUrl: "Build/091201.data",
+                    frameworkUrl: "Build/091201.framework.js",
+                    codeUrl: "Build/091201.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "0912",
                     productName: "HealthEducationSheet",
